# gravitas

./: .gitignore  prototype_v1.1.py
legacy/: API.md  README.md
legacy/backend/: README.md  pyproject.toml
legacy/backend/app/: main.py
legacy/backend/app/api/routes/: imagery.py
legacy/backend/app/config/: constants.py
legacy/backend/app/lib/earth_engine/: calculations.py  client.py  imagery.py  visualization.py
legacy/backend/app/models/: schemas.py
legacy/frontend/: pnpm-lock.yaml
legacy/frontend/app/: layout.tsx  page.tsx
legacy/frontend/components/map/: ThermalMap.tsx
legacy/frontend/lib/api/: client.ts
legacy/frontend/lib/constants/: index.ts
legacy/frontend/lib/types/: api.ts
